try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,14 +68,6 @@
     }
 }
 
-#navbar-main {
-    background-color: #cfcfcf;
-}
-
-#fun {
-    background-color: #cfcfcf;
-}
-
 .fun {
     background-color: inherit;
     width: 100%;
